examples/nameresolution/effects.an
ability Three =
    one: fn Unit -> Unit
    two: fn I32 -> I32
    three: fn I32 I32 -> I32

ability State a =
    get: fn Unit -> a
    put: fn a -> Unit

main () =
    handler h1 for
      | one () -> ()
      | one () -> ()
    in ()

    handler h2 for
      | get () -> resume ()
      | put () -> ()
    in ()

    handler h3 for
      | put () -> ()
      | three 0 1 -> ()
    in ()

    handler h4 for
      | get () -> resume ()
    in ()

// args: -e ast-r --no-color
// expected exit status: 1
// expected stdout:
// // id = c1m485_8962
// type Three_c1m485_8962_0 [env]_4 =
//     one_c1m485_8962_1: fn Unit_bUnit [[env]_4] -> Unit_bUnit
//     two_c1m485_8962_2: fn I32 [[env]_4] -> I32
//     three_c1m485_8962_3: fn I32 I32 [[env]_4] -> I32
// 
// // id = c1m485_5987
// type State_c1m485_5987_0 a_1 [env]_6 =
//     get_c1m485_5987_2: fn Unit_bUnit [[env]_6] -> a_1
//     put_c1m485_5987_4: fn a_1 [[env]_6] -> Unit_bUnit
// 
// // id = c1m485_1944
// main_c1m485_1944_0 () =
//     handler h1_1 for
//     | one_c1m485_8962_1 () -> fn () resume_2 -> ()
//     | one_c1m485_8962_1 () -> fn () resume_3 -> ()
//     in fn () -> ()
//     handler h2_4 for
//     | get_c1m485_5987_2 () -> fn () resume_5 -> resume_5 ()
//     | put_c1m485_5987_4 () -> fn () resume_6 -> ()
//     in fn () -> ()
//     handler h3_7 for
//     | put_c1m485_5987_4 () -> fn () resume_8 -> ()
//     | three_c1m485_8962_3 0 1 -> fn 0 1 resume_9 -> ()
//     in fn () -> ()
//     handler h4_10 for
//     | get_c1m485_5987_2 () -> fn () resume_11 -> resume_11 ()
//     in fn () -> ()

// expected stderr:
// examples/nameresolution/effects.an:11:5
// 10 | main () =
// 11 |     handler h1 for	// error: Handler for effect Three is missing methods: three, two
//    |     ^^^^^^^^^^^^^^
// 12 |       | one () -> ()
// 
// examples/nameresolution/effects.an:13:9
// 11 |     handler h1 for
// 12 |       | one () -> ()	// note: one was previously handled here
//    |         ---
// 13 |       | one () -> ()	// error: Effect method one is handled more than once
//    |         ^^^
// 14 |     in ()
// 
// examples/nameresolution/effects.an:21:5
// 21 |     handler h3 for	// error: Handler for effect State is missing method: get
//    |     ^^^^^^^^^^^^^^
// 22 |       | put () -> ()
// 
// examples/nameresolution/effects.an:21:5
// 21 |     handler h3 for	// error: Handler mixes methods from effects State and Three
//    |     ^^^^^^^^^^^^^^
// 22 |       | put () -> ()
// 
// examples/nameresolution/effects.an:26:5
// 26 |     handler h4 for	// error: Handler for effect State is missing method: put
//    |     ^^^^^^^^^^^^^^
// 27 |       | get () -> resume ()
// 
// Found 5 errors and 0 warnings

